--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@ Turning to the dynamics, we now have the result
 \end{subparts}
 \part\marginnote{$10$}  Answer the following questions
 \begin{subparts}
-\subpart\marginnote{$4$} Write down the statement of theory of least squares. An observer measures a physical quantity as $1.70, 1.78, 1.74, 1.79$, and $1.74$. Apply the theory of least squares to find the most probable
+\subpart\marginnote{$4$} Write down the statement of theory of least squares. An observer measures a physical quantity as $1.70, 1.78, 1.74$, $1.79$, and $1.74$. Apply the theory of least squares to find the most probable
 value.
 \subpart\marginnote{$3$} Applying theory of least squares, set up the normal equations for a straight line $y=a+bx$.
 \subpart\marginnote{$3$}Two resistances $100\Omega \pm 5\Omega $ and $150\Omega \pm 15\Omega $ are connected in series. If the deviations are standard deviations, how the resultant resistance can be expressed? 
