--- a/main.tex
+++ b/main.tex
@@ -52,10 +52,9 @@
 \part\marginnote{$2$}  What will be the output of the following python program?
 \begin{lstlisting}[language=Python]
 import numpy as np
-e  = np.array([(1,2,3), (4,5,6)])
+e  = np.array([[1,2,3], [4,5,6]])
 print(e)
-e.reshape(3,2)
-print(e)
+print(e.reshape(3,2))
 \end{lstlisting}
 \part\marginnote{$2$}  Write LaTeX expressions for rendering the following equations.
 \begin{subparts}
@@ -72,6 +71,8 @@ print(e)
 \part\marginnote{$2$} (U.C)
 \part\marginnote{$2$} Find the inverse $z-$ transform of the function $F(z)=\displaystyle\frac{6}{z-2}$.
 \part\marginnote{$2$} (T.B)
+%\part\marginnote{$2$}What are the different disciplines by which a research can be classified?
+%\part\marginnote{$2$}What do you mean by meta search engines? Give examples.
 \part\marginnote{$2$}Power in a circuit is measured by measuring a current through a resistor. The current is measured with an accuracy of $\pm 1.5\% $ and the tolerance band of the resistor is $\pm 0.5\%$. The errors are limiting or guarantee errors. Find the accuracy with which the power is measured.
 %\part\marginnote{$2$}  What do you mean by precise and accurate measurements? 
 \end{parts}
@@ -131,13 +132,7 @@ print(e)
 	\subpart\marginnote{$4$}  Briefly describe the four stages of the building processes of a C program.
 	\subpart\marginnote{$2$}  What are the differences between a high-level and mid-level programming language?
 \end{subparts}	
-\part\marginnote{$10$}  (C.H) Answer the following questions.
-\addpoints
-\begin{subparts}
-\subpart\marginnote{$2$} 
-\subpart\marginnote{$4$}  
-\subpart\marginnote{$4$} 
-\end{subparts}
+\part\marginnote{$10$}  (C.H) 
 \part\marginnote{$10$}  Answer the following questions.
 \begin{subparts}
 	\subpart\marginnote{$5$}Write down the normal distribution function explaining the symbols therein. Show that $\sigma^2 = \overline{x^2}-\bar{x}^2 $, where the symbols have their usual meaning. 
@@ -145,7 +140,16 @@ print(e)
 	\subpart\marginnote{$2$} Consider error propagation through a single-variable function $Z = f(A)$.
 	Here, $\alpha_A$ represents the error on the mean $\bar{A}$ . Show that the uncertainty in $Z$ can also be represented as $\alpha_Z = \left|\displaystyle\frac{\mathrm{d}Z}{\mathrm{d}A}\right|\alpha_A$.
 \end{subparts}
-\part\marginnote{$10$} (A.D)
+\part\marginnote{$10$} Answer the following questions.
+\addpoints
+\begin{subparts}
+	\subpart\marginnote{$4$}  What are main motivations for publishing an article in a scientific
+	journal?
+	\subpart\marginnote{$2$} Give two advantages of e-journals over the conventional print journals.	
+	\subpart\marginnote{$2$}What do you mean by a ‘DATABASE’? Write at least two different kinds
+	of databases available on the internet. 	
+	\subpart\marginnote{$2$}What do you mean by open access repositories? Give example. 
+\end{subparts}
 \part\marginnote{$10$}  Answer the following questions.
 \begin{subparts}
 	\subpart\marginnote{$6$} Find the Laplace transform of the rectangular wave given in the figure below:
