--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@ print(e.reshape(3,2))
 	\end{equation}
 \end{subparts}	
 \part\marginnote{$2$} (C.H)
-\part\marginnote{$2$} (U.C)
+\part\marginnote{$2$} What are the criteria for granting a patent? Give two inventions that are not patentable.
 \part\marginnote{$2$} Find the inverse $z-$ transform of the function $F(z)=\displaystyle\frac{6}{z-2}$.
 \part\marginnote{$2$} (T.B)
 %\part\marginnote{$2$}What are the different disciplines by which a research can be classified?
