--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ print(e.reshape(3,2))
 \part\marginnote{$2$} (C.H)
 \part\marginnote{$2$} What are the criteria for granting a patent? Give two inventions that are not patentable.
 \part\marginnote{$2$} Find the inverse $z-$ transform of the function $F(z)=\displaystyle\frac{6}{z-2}$.
-\part\marginnote{$2$} (T.B)
+\part\marginnote{$2$}  What are the possible types of fixed points in a two dimensional system ?
 %\part\marginnote{$2$}What are the different disciplines by which a research can be classified?
 %\part\marginnote{$2$}What do you mean by meta search engines? Give examples.
 \part\marginnote{$2$}Power in a circuit is measured by measuring a current through a resistor. The current is measured with an accuracy of $\pm 1.5\% $ and the tolerance band of the resistor is $\pm 0.5\%$. The errors are limiting or guarantee errors. Find the accuracy with which the power is measured.
@@ -160,10 +160,10 @@ print(e.reshape(3,2))
 		height=4cm,
 		x axis line style={-stealth},
 		y axis line style={-stealth},
-		xticklabels={0,1, $\frac{T}{2}$,$T$, $\frac{3T}{2}$, $2T$},
+		xticklabels={$\;\;\;\frac{T}{2}$,$\;\;\;T$, $\;\;\;\;\frac{3T}{2}$, $\;\;\;\;\;2T$}, xtick={1,...,4},
 		ymax = 1.5,xmax=5.2,
 		axis lines*=center,
-		yticklabels={$-A$,$-A$, $0$, $A$},
+		yticklabels={$-A$, $A$}, ytick={-1,1},
 		xlabel={t $\rightarrow$},
 		xlabel near ticks,
 		ylabel near ticks]
@@ -178,7 +178,12 @@ print(e.reshape(3,2))
 \end{subparts}
 \part\marginnote{$10$}  Answer the following questions.
 \begin{subparts}
-\subpart\marginnote{$6$} (T.B)
+\subpart\marginnote{$6$}  Consider the following pendulum equation: $\ddot{x} + \sin{x}=0 $.
+\begin{subsubparts}
+\subsubpart\marginnote{$3$} Derive the fixed points and identify the nature of the fixed points. 
+\subsubpart\marginnote{$2$} Draw the qualitative phase portrait of the dynamics.
+\subsubpart\marginnote{$1$}  Explain the physics of the pendulum from the phase portrait above.
+\end{subsubparts}
 \subpart\marginnote{$4$}Find the energy eigenvalues of a particle moving in a one dimensional
 anharmonic potential $V(x) = Kx^2 + bx^3$, where $K$ and $b$ are constants ($b\ll 1$).  
 \end{subparts}
