--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@ print(e.reshape(3,2))
 	\sum^N_{n=0} r^n = \frac{1-r^N}{1-r}.\nonumber
 	\end{equation}
 \end{subparts}	
-\part\marginnote{$2$} (C.H)
+\part\marginnote{$2$} Describe the different types of loop statements in C programs.
 \part\marginnote{$2$} What are the criteria for granting a patent? Give two inventions that are not patentable.
 \part\marginnote{$2$} Find the inverse $z-$ transform of the function $F(z)=\displaystyle\frac{6}{z-2}$.
 \part\marginnote{$2$}  What are the possible types of fixed points in a two dimensional system ?
@@ -132,7 +132,12 @@ print(e.reshape(3,2))
 	\subpart\marginnote{$4$}  Briefly describe the four stages of the building processes of a C program.
 	\subpart\marginnote{$2$}  What are the differences between a high-level and mid-level programming language?
 \end{subparts}	
-\part\marginnote{$10$}  (C.H) 
+\part\marginnote{$10$}  Answer the following questions:
+\begin{subparts}
+    \subpart\marginnote{$2$}What are functions in the C programming language? 
+    \subpart\marginnote{$4$}What are the different ways of writing functions in C programs? 
+    \subpart\marginnote{$4$}Write a program in C to find the factorial of an integer using a recursive function.
+\end{subparts}
 \part\marginnote{$10$}  Answer the following questions.
 \begin{subparts}
 	\subpart\marginnote{$5$}Write down the normal distribution function explaining the symbols therein. Show that $\sigma^2 = \overline{x^2}-\bar{x}^2 $, where the symbols have their usual meaning. 
@@ -145,10 +150,10 @@ print(e.reshape(3,2))
 \begin{subparts}
 	\subpart\marginnote{$4$}  What are main motivations for publishing an article in a scientific
 	journal?
-	\subpart\marginnote{$2$} Give two advantages of e-journals over the conventional print journals.	
+	\subpart\marginnote{$2$} Give two advantages of e-journals over conventional print journals.	
 	\subpart\marginnote{$2$}What do you mean by a ‘DATABASE’? Write at least two different kinds
 	of databases available on the internet. 	
-	\subpart\marginnote{$2$}What do you mean by open access repositories? Give example. 
+	\subpart\marginnote{$2$}What do you mean by open access repositories? Give an example. 
 \end{subparts}
 \part\marginnote{$10$}  Answer the following questions.
 \begin{subparts}
